@@ -2,6 +2,7 @@ package com.fast.loan.service;
 
 import com.fast.loan.exception.BaseException;
 import com.fast.loan.exception.ResultType;
+import com.fast.loan.repository.ApplicationRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
@@ -25,21 +26,40 @@ public class FileStorageServiceImpl implements FileStorageService {
     @Value("{spring.servlet.multipart.location}")
     private String uploadPath;
 
+    private final ApplicationRepository applicationRepository;
+
     @Override
-    public void save(MultipartFile file) {
+    public void save(Long applicationId, MultipartFile file) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
         try {
-            Files.copy(file.getInputStream(), Paths.get(uploadPath).resolve(file.getOriginalFilename()), StandardCopyOption.REPLACE_EXISTING);
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path directoryPath = Path.of(applicationPath);
+            if (Files.exists(directoryPath)) {
+                Files.createDirectory(directoryPath);
+            }
+
+            Files.copy(file.getInputStream(), Paths.get(applicationPath).resolve(file.getOriginalFilename()), StandardCopyOption.REPLACE_EXISTING);
         } catch (IOException e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override
-    public Resource load(String fileName) {
-        Path file = Paths.get(uploadPath).resolve(fileName);
+    public Resource load(Long applicationId, String fileName) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
+
 
         Resource resource = null;
         try {
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path file = Paths.get(applicationPath).resolve(fileName);
+
             resource = new UrlResource(file.toUri());
 
             if (resource.isReadable() || resource.exists()) {
@@ -53,16 +73,30 @@ public class FileStorageServiceImpl implements FileStorageService {
     }
 
     @Override
-    public Stream<Path> loadAll() {
+    public Stream<Path> loadAll(Long applicationId) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
         try {
-            return Files.walk(Paths.get(uploadPath), 1).filter(path -> !path.equals(Paths.get(uploadPath)));
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            return Files.walk(Paths.get(applicationPath), 1).filter(path -> !path.equals(Paths.get(applicationPath)));
         } catch (IOException e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override
-    public void deleteAll() {
-        FileSystemUtils.deleteRecursively(Paths.get(uploadPath).toFile());
+    public void deleteAll(Long applicationId) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
+        String applicationPath = uploadPath.concat("/" + applicationId);
+        FileSystemUtils.deleteRecursively(Paths.get(applicationPath).toFile());
+    }
+
+    private boolean isPresentApplication(Long applicationId) {
+        return applicationRepository.findById(applicationId).isPresent();
     }
 }
